crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_pattern_var_no_leak.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_pattern_var_no_leak

struct Wrapper { action: ~() -> String }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]

fn consume(v0: ~String) -> String =
  v0

fn test(v1: ~String, v2: ~String) -> String =
  let_join v11(v9: String) =
    let v10: String = call consume(v2)
    v10
  in
  let v5: ~() -> String = make_closure(lambda$26, [v1])
  let v6: ~Wrapper = construct Wrapper(v5)
  let v7: ~() -> String = project v6.0
  let v8: String = call_closure v7()
  jump v11(v8)

fn lambda$26(v3: ~String) -> String =
  let v4: String = call consume(v3)
  v4
