crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_recur_fresh_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_recur_fresh_ok

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn consume(v0: ~Option[Int]) -> Option[Int] =
  switch v0 {
    0 (v1: Int) ->
      let v2: Option[Int] = construct Option::Some#0(v1)
      v2
    1 ->
      let v3: Option[Int] = construct Option::None#1()
      v3
  }

fn make() -> ~Option[Int] =
  let v4: ~Option[Int] = construct Option::Some#0(0)
  v4

fn loop(v5: ~Option[Int], v6: Int) -> Option[Int] =
  let_join [recur] v7(v8: ~Option[Int], v9: Int) =
    let_join v17(v12: Bool) =
      if v12 {
        let v13: Option[Int] = call consume(v8)
        v13
      } else {
        let v14: Option[Int] = call consume(v8)
        let v15: ~Option[Int] = call make()
        let v16: Int = sub_int(v9, 1)
        jump v7(v15, v16)
      }
    in
    let v10: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v11: Bool = trait_call core/eq.Eq.eq(v10, v9, 0)
    jump v17(v11)
  in
  jump v7(v5, v6)
