crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_recursive_accumulator.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_recursive_accumulator

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn sum_to(v0: Int, v1: Int) -> Int =
  let_join v8(v4: Bool) =
    if v4 {
      v1
    } else {
      let v5: Int = sub_int(v0, 1)
      let v6: Int = add_int(v1, v0)
      let v7: Int = call sum_to(v5, v6)
      v7
    }
  in
  let v2: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v3: Bool = trait_call core/eq.Eq.eq(v2, v0, 0)
  jump v8(v3)
