crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_valid_block_expr.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_valid_block_expr

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn consume(v0: ~Option[Int]) -> Option[Int] =
  switch v0 {
    0 (v1: Int) ->
      let v2: Option[Int] = construct Option::Some#0(v1)
      v2
    1 ->
      let v3: Option[Int] = construct Option::None#1()
      v3
  }

fn test() -> Option[Int] =
  let_join v7(v5: ~Option[Int]) =
    let v6: Option[Int] = call consume(v5)
    v6
  in
  let v4: ~Option[Int] = construct Option::Some#0(0)
  jump v7(v4)
